管理员获取执行记录接口
